--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,7 +1,8 @@
 <div class="header">
-   
+   <h2>Create your own product </h2>
 </div>
 <div class="form">
+   <%= image_tag "2753527_370.jpg"%>
    <%= form_for @products do |f| %>
        <div class="center">
            <div class="Bold">
@@ -28,8 +29,6 @@
    <% end %>
          </div>
 </div>
+  
 
-<div class="align">
-  <%= image_tag "2753527_370.jpg"%>
-</div>
  
