--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,6 @@
+<div class="sidebar">
+	<%= link_to "About", '#' %>
+   <%= link_to "Edit", '#' %>
+   <%= link_to "Delete", '#' %>
+</div>
 <%= render 'layouts/form'%>
